ArgoCD/install/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /argocd/$1
spec:
  rules:
    - host: minilab.test
      http:
        paths:
          - path: /argocd/(.*)
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
